--- a/style.css
+++ b/style.css
@@ -173,3 +173,15 @@ text-align: center;
 padding: 20px;
 margin-top: 40px;
 }
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: red;
+  position: relative;
+  animation: moveBox 2s;
+}
+
+@keyframes moveBox {
+  from {left: 0px;}
+  to {left: 200px;}
+}
