--- a/style.css
+++ b/style.css
@@ -173,15 +173,29 @@ text-align: center;
 padding: 20px;
 margin-top: 40px;
 }
-.box {
-  width: 100px;
-  height: 100px;
-  background-color: red;
-  position: relative;
-  animation: moveBox 2s;
+#popup {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
 }
 
-@keyframes moveBox {
-  from {left: 0px;}
-  to {left: 200px;}
+#popup-content {
+  background-color: white;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 600px;
 }
+
+#popup button {
+  display: block;
+  margin-top: 20px;
+}
+
